--- a/final/10climate.html
+++ b/final/10climate.html
@@ -33,11 +33,18 @@
     <img src='images/climate1.JPG' alt="poster" data-transition="slideInLeft" />
     <img src='images/climate2.JPG' alt="close" data-transition="slideInLeft" />
     <img src='images/climate3.JPG' alt="close3" data-transition="slideInLeft" />
+    <img src='images/climate4.JPG' alt="close4" data-transition="slideInLeft" />
+    <img src='images/climate5.JPG' alt="close5" data-transition="slideInLeft" />
+    <img src='images/climate6.JPG' alt="close6" data-transition="slideInLeft" />
+    <img src='images/climate7.JPG' alt="close7" data-transition="slideInLeft" />
+    <img src='images/climate8.JPG' alt="close8" data-transition="slideInLeft" />
  </div>
-
-  <script type="text/javascript">
+ 
+<script type="text/javascript">
 $(window).load(function() {
-    $('#photos').nivoSlider();
+    $('#photos').nivoSlider({
+      manualAdvance: true
+    });
 });
 </script>
 
@@ -48,7 +55,7 @@ $(window).load(function() {
   </div>
 
      <div id='others'>
-    <h1>Other Projects</h1>
+    <h1>Other Work</h1>
     <br>
     <ul class='project menu'> 
         <li><a href="100poster.html" style="text-decoration: none; color:black;">A Visualization of 100 Bass Guitars</a></li>
@@ -59,3 +66,4 @@ $(window).load(function() {
       </ul>
   </div>
 </div>
+</body>
