--- a/final/lemon.html
+++ b/final/lemon.html
@@ -53,7 +53,7 @@ $(window).load(function() {
   </div>
 
    <div id='others'>
-    <h1>Other Projects</h1>
+    <h1>Other Work</h1>
     <br>
     <ul class='project menu'> 
         <li><a href="100poster.html" style="text-decoration: none; color:black;">A Visualization of 100 Bass Guitars</a></li>
@@ -64,3 +64,4 @@ $(window).load(function() {
       </ul>
   </div>
 </div>
+</body>
