--- a/final/songposter.html
+++ b/final/songposter.html
@@ -37,7 +37,7 @@
 </div>
 
  <div id='others'>
-    <h1>Other Projects</h1>
+    <h1>Other Work</h1>
     <br>
     <ul class='project menu'> 
         <li><a href="100poster.html" style="text-decoration: none; color:black;">A Visualization of 100 Bass Guitars</a></li>
@@ -47,3 +47,4 @@
         <li><a href="10climate.html" style="text-decoration: none; color:black;">Ten Things About Climate Change</a></li>
       </ul>
   </div>
+</body>
