--- a/final/work.html
+++ b/final/work.html
@@ -25,15 +25,11 @@
 
 
   <div id='pictures'>
-      <a href="100poster.html"><img id ='bass' src="images/100poster.png" alt="100poster"/></a>
-      <a href="lemon.html"><img id='lemons' src="images/lemonrecipes.png" alt="lemon"/></a>
-      <a href="songposter.html"><img id='miyavi' src="images/songposter.png" alt="songposter"/></a> 
+      <a href="100poster.html"><img id ='bass' src="images/poster9.png" alt="100poster"/></a>
+      <a href="lemon.html"><img id='lemons' src="images/lemon1.jpg" alt="lemon"/></a>
+      <a href="songposter.html"><img id='miyavi' src="images/songposter3.jpg" alt="songposter"/></a> 
        <a href="opposites.html"><img id='opposites' src="images/opposites.png" alt="opposites"/></a>
-       <a href="10climate.html"><img id='climate' src="images/climate.png" alt="climate"/></a>
-       <a href="book.html"><img id='book' src="images/book.png" alt="book"/></a>
+       <a href="10climate.html"><img id='climate' src="images/climate2.JPG" alt="climate"/></a>
+       <a href="book.html"><img id='book' src="images/book1.jpg" alt="book"/></a>
   </div>
-
-
-
-
 </body>
