--- a/final/opposites.html
+++ b/final/opposites.html
@@ -4,7 +4,7 @@
     <title>My Title</title>
     <link rel="stylesheet" type='text/css' href="style.css" />
     <link rel="stylesheet" type='text/css' href="nivo-slider.css" />
-    <link rel="stylesheet" href="themes/light/light.css" type="text/css" />
+    <link rel="stylesheet" href="themes/default/default.css" type="text/css" />
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js" type="text/javascript"></script>
     <script src="jquery.nivo.slider.pack.js" type="text/javascript"></script>
   </head>
@@ -27,7 +27,7 @@
   </nav>
 </header>
 
-<div class="slider-wrapper theme-light">
+<div class="slider-wrapper theme-default">
   <div id='photos' class='nivoSlider'>
     <img src='images/opposites_image.jpg' alt="image" data-transition="slideInLeft" />
     <img src='images/opposites2.jpg' alt="image2" data-transition="slideInLeft" />
@@ -35,18 +35,20 @@
 
 <script type="text/javascript">
 $(window).load(function() {
-    $('#photos').nivoSlider();
+    $('#photos').nivoSlider({
+      manualAdvance: true
+    });
 });
 </script>
 
     <div id='information'>
     <h1>Opposites</h1>
     <br>
-    <p> A series of posters featuring the two opposite meanings: healthy and unhealthy. Two posters were created where one was image based and the other was typography based. The concept for the posters was to showcase two different objects which were similar in shape to convey two opposing meanings.</p>
+    <p> A series of posters featuring the two opposite meanings: healthy and unhealthy. Two posters were created where one was image based and the other was typography based. The posters showcase two different objects which were similar in shape but conveys two opposing meanings.</p>
  </div>
 
   <div id='others'>
-    <h1>Other Projects</h1>
+    <h1>Other Work</h1>
     <br>
     <ul class='project menu'> 
         <li><a href="100poster.html" style="text-decoration: none; color:black;">A Visualization of 100 Bass Guitars</a></li>
