--- a/final/webpage_text.html
+++ b/final/webpage_text.html
@@ -1,8 +1,12 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html>
-<head>  
+<head>
     <title>My Title</title>
     <link rel="stylesheet" type='text/css' href="style.css" />
+    <link rel="stylesheet" type='text/css' href='nivo-slider.css'/>
+    <link rel="stylesheet" href="themes/default/default.css" type="text/css" />
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js" type="text/javascript"></script>
+    <script src="jquery.nivo.slider.pack.js" type="text/javascript"></script>
 </head>
 
   <body>
@@ -24,8 +28,22 @@
   </nav>
 </header>
 
-<div id='slideshow'>
-  <img id='shot' src="images/front_page.png" alt="songposter"/>
+<div class="wrapper theme-default">
+  <div id='photo' class='nivoSlider'>
+    <img src='images/lemon1.jpg' alt="close1" data-transition="fade" />
+    <img src='images/climate2.jpg' alt="close3" data-transition="fade" />
+    <img src='images/book1.jpg' alt="close2" data-transition="fade" />
+    <img src='images/poster9.png' alt="close4" data-transition="fade" />
+    <img src='images/songposter3.jpg' alt="close4" data-transition="fade" />
+ </div>
+
 </div>
+<script type="text/javascript">
+$(window).load(function() {
+    $('#photo').nivoSlider({
+    });
+});
+
+</script>
 </div>
 
