--- a/final/webpage_text.html
+++ b/final/webpage_text.html
@@ -16,13 +16,13 @@
   <nav id='top-nav'>
     <ul>
     <li class='circle'>
-      <a href='about.html'style="text-decoration: none;">ABOUT</a> 
+      <a href='about.html' style="text-decoration: none;">ABOUT</a> 
       </li>
       <li class='circle'> 
-        <a href='work.html'style="text-decoration: none;">WORK</a>
+        <a href='work.html' style="text-decoration: none;">WORK</a>
       </li>
       <li class='circle'>
-        <a href='resume.html'style="text-decoration: none;">RESUME</a>
+        <a href='resume.html' style="text-decoration: none;">RESUME</a>
       </li>
     </ul>
   </nav>
@@ -46,4 +46,5 @@ $(window).load(function() {
 
 </script>
 </div>
+</body>
 
