--- a/final/webpage_text.html
+++ b/final/webpage_text.html
@@ -31,8 +31,8 @@
 <div class="wrapper theme-default">
   <div id='photo' class='nivoSlider'>
     <img src='images/lemon1.jpg' alt="close1" data-transition="fade" />
-    <img src='images/climate2.jpg' alt="close3" data-transition="fade" />
-    <img src='images/book1.jpg' alt="close2" data-transition="fade" />
+    <img src='images/frontclimate.jpg' alt="close3" data-transition="fade" />
+    <img src='images/frontbook.jpg' alt="close2" data-transition="fade" />
     <img src='images/poster9.png' alt="close4" data-transition="fade" />
     <img src='images/songposter3.jpg' alt="close4" data-transition="fade" />
  </div>
