--- a/final/webpage_text.html
+++ b/final/webpage_text.html
@@ -31,7 +31,7 @@
 <div class="wrapper theme-default">
   <div id='photo' class='nivoSlider'>
     <img src='images/lemon1.jpg' alt="close1" data-transition="fade" />
-    <img src='images/frontclimate.jpg' alt="close3" data-transition="fade" />
+    <img src='images/frontclimate.JPG' alt="close3" data-transition="fade" />
     <img src='images/frontbook.JPG' alt="close2" data-transition="fade" />
     <img src='images/poster9.png' alt="close5" data-transition="fade" />
     <img src='images/songposter3.jpg' alt="close4" data-transition="fade" />
