--- a/final/10climate.html
+++ b/final/10climate.html
@@ -51,7 +51,7 @@ $(window).load(function() {
   <div id='information'>
     <h1>10 Problems About Climate Change</h1>
     <br>
-    <p> A brochure about the ten problems that Japan is affected from climate change. The book consists of a combination of illustrations, infographics and photography. The book was based on a three column grid, where imagery and text creates a blend. Book was bound in an accordion style.</p>
+    <p> A brochure about the ten problems Japan is affected from climate change. The book consists of a combination of illustrations, infographics and photography. The book was based on a three column grid, where imagery and text creates a blend. Book was bound in an accordion style.</p>
   </div>
 
      <div id='others'>
