--- a/final/book.html
+++ b/final/book.html
@@ -30,12 +30,12 @@
 
 <div class="slider-wrapper theme-default">
   <div id='photos' class='nivoSlider'>
-    <img src='images/book9.jpg' alt="poster" data-transition="slideInLeft" />
-    <img src='images/book2.jpg' alt="close" data-transition="slideInLeft" />
-    <img src='images/book3.jpg' alt="close3" data-transition="slideInLeft" />
-    <img src='images/book4.jpg' alt="close4" data-transition="slideInLeft" />
-    <img src='images/book5.jpg' alt="close5" data-transition="slideInLeft" />
-    <img src='images/book6.jpg' alt="close6" data-transition="slideInLeft" />
+    <img src='images/bookcover.jpg' alt="poster" data-transition="slideInLeft" />
+    <img src='images/contents.jpg' alt="close" data-transition="slideInLeft" />
+    <img src='images/timeline.jpg' alt="close3" data-transition="slideInLeft" />
+    <img src='images/pg1.jpg' alt="close4" data-transition="slideInLeft" />
+    <img src='images/pg2.jpg' alt="close5" data-transition="slideInLeft" />
+    <img src='images/pg3.jpg' alt="close6" data-transition="slideInLeft" />
  </div>
 
 <script type="text/javascript">
