--- a/final/work.html
+++ b/final/work.html
@@ -30,6 +30,6 @@
       <a href="songposter.html"><img id='miyavi' src="images/songposter3.jpg" alt="songposter"/></a> 
        <a href="opposites.html"><img id='opposites' src="images/opposites.png" alt="opposites"/></a>
        <a href="10climate.html"><img id='climate' src="images/climate2.JPG" alt="climate"/></a>
-       <a href="book.html"><img id='book' src="images/book1.jpg" alt="book"/></a>
+       <a href="book.html"><img id='book' src="images/frontbook.JPG" alt="book"/></a>
   </div>
 </body>
