--- a/final/about.html
+++ b/final/about.html
@@ -35,7 +35,7 @@
             <img src="images/mail.png" alt='mail'/>
             </a>
           </li>
-       <li><a href="https://twitter.com">
+       <li><a href="https://twitter.com" target="_blank">
          <img src="images/twitter.png" alt='twitter'/>
             </a>
           </li>
