--- a/final/songposter.html
+++ b/final/songposter.html
@@ -19,7 +19,7 @@
         <a href='work.html' style="text-decoration: none;">WORK</a>
       </li>
       <li class='circle'>
-        <a href='resume.html' style="text-decoration: none;">RESUME</a>
+        <a href='resume.pdf' target="_blank" style="text-decoration: none;">RESUME</a>
       </li>
     </ul>
   </nav>
