--- a/final/100poster.html
+++ b/final/100poster.html
@@ -22,7 +22,7 @@
         <a href='work.html' style="text-decoration: none;">WORK</a>
       </li>
       <li class='circle'>
-        <a href='resume.html' style="text-decoration: none;">RESUME</a>
+        <a href='resume.pdf' target="_blank" style="text-decoration: none;">RESUME</a>
       </li>
     </ul>
   </nav>
@@ -48,7 +48,7 @@ $(window).load(function() {
   <div id='information'>
     <h1>A Visualization of 100 Bass Guitars</h1>
     <br>
-    <p> A poster featuring data of the last 100 bass guitars I have played at an instrument store. Data organized in a format where viewer can see each specific attribute of the instrument. </p>
+    <p> A poster featuring data of the last 100 bass guitars I have played at an instrument store. The data was organized in a format where viewer can see each specific attribute of the instrument based on my perosonal opinion of what is the most important specification.</p>
   </div>
 
       <div id='others'>
