--- a/final/opposites.html
+++ b/final/opposites.html
@@ -44,7 +44,7 @@ $(window).load(function() {
     <div id='information'>
     <h1>Opposites</h1>
     <br>
-    <p> A series of posters featuring the two opposite meanings: healthy and unhealthy. Two posters were created where one was image based and the other was typography based. The posters showcase two different objects which were similar in shape but conveys two opposing meanings.</p>
+    <p> A series of posters featuring the two opposite meanings: healthy and unhealthy. Two posters were created where one was image based and the other was typography based. The two posters showcase two different objects which were similar in shape but conveys two opposing meanings.</p>
  </div>
 
   <div id='others'>
