--- a/final/songposter.html
+++ b/final/songposter.html
@@ -33,7 +33,7 @@
   <div id='information'>
       <h1>DAY 1 Poster</h1>
       <br>
-    <p> A poster for the song DAY 1 by a Japanese Guitarist named Miyavi. The poster was created from influence by designer Takashi Kondo. The concept of the poster was to create the strong layers of the song through painting and photo collaging.</p>
+    <p> A poster for the song DAY 1 by a Japanese Guitarist named Miyavi. The poster was created from influence by designer Takashi Kondo. The concept of the poster was to create the strong layers of the song through analog / digital painting, photo collaging and typography.</p>
 </div>
 
  <div id='others'>
