--- a/final/about.html
+++ b/final/about.html
@@ -29,7 +29,7 @@
     <div class='aboutme'>
       <p>Hi my name is Shin Ishii. I'm currently a junior studying Graphic Design at Massachusetts College of Art and Design. I focus a lot of my work on playfulness and user experience. I like to make things look better, while still maintaining an easy-to-use concept. Being both a designer and a studio recording bassist, I try to maintain a rhythm throughout my design work. </p>
       <br>
-      <p>Feel free to contact me through e-mail or twitter about any design work or just to say hi!</p>
+      <p>Feel free to contact me by e-mail or twitter about any design work or just to say hi!</p>
 <ul id='contacts'>
        <li><a href="mailto:sishii@massart.edu">
             <img src="images/mail.png" alt='mail'/>
